# TS-Nginx_Gunicorn

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: urls.py  views.py
app/templates/: home.html
nginx/: nginx.conf
project/: settings.py  urls.py
static/css/: style.css
