[tool.poetry]
name = "ts-nginx_gunicorn"
version = "0.1.0"
description = ""
authors = ["william villani stiehler <william.stiehler@olist.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"
psycopg2-binary = "^2.9.1"
gunicorn = "^20.1.0"
postgres = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
